# esp32_controller

./: .cproject  .gitignore  .project  CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
certs/: secrets.txt
gate_op/: gateop.c  gateop.h  readme.md
main/: CMakeLists.txt  main.c  project_specific.h
pump_op/: adc_op.c  adc_op.h  pumpop.c  pumpop.h
water_op/: waterop.c  waterop.h
westa_op/: dht22.c  dht22.h  readme.md  westaop.c  westaop.h
westa_op/bosch_bmp280/: bmp2.c  bmp2.h  bmp2_defs.h
